# context-compression

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: AB-TESTING.md  LIVE-COPILOT.md  PLAIN-LANGUAGE-REPORT.md  QUICKSTART-SWEBENCH.md  RUNG10-ADVISORY-EVICTION.md  RUNG11-ADVISOR-SHIM.md  RUNG12-ABC-RESULTS.md  RUNG13-THRASH-GUARD.md  RUNG7-RESULTS.md  RUNG8-RESULTS.md  RUNG9-B2-LOCAL-7B.md  context-compression-explainer.html
examples/: ab_dryrun_driver.py
scripts/: advisory_probe.py  b2_bench.py  budget_sweep.py  nudge_test.py  prepull.sh  rates.json  run_abc.sh  run_arm.sh  select_instances.py  sweagent-nofilemap.yaml
src/ctxc/: __init__.py  ab.py  advisor.py  aic.py  cli.py  compressor.py  fleet.py  guard.py  ingest.py  models.py  probe.py  proxy.py  redact.py  session.py  smoke.py  strategies.py  summarize.py  synth.py  tokens.py  verify.py
tests/: conftest.py  test_ab.py  test_advisor.py  test_aic.py  test_compressor.py  test_gap_closure.py  test_guard.py  test_hardening.py  test_live_kit.py  test_models.py  test_pilot_kit.py  test_probe_ingest.py  test_proxy.py  test_review_fixes.py  test_salience.py  test_session.py  test_summarize.py  test_verify.py
