[project]
name = "ctxc"
version = "0.1.0"
description = "Cache-aware context compression for OpenAI/Copilot-dialect agent sessions, with verification plumbing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tiktoken>=0.7",
    "httpx>=0.27",
    "starlette>=0.37",
]

[project.optional-dependencies]
serve = ["uvicorn>=0.30"]

[project.scripts]
ctxc = "ctxc.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "uvicorn>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
